# MiniTools

./: Dockerfile  appspec.yml  celery.sh  docker-compose.yml  grafana.json  prometheus.yml  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  main.yml
Documentation/: urls.py  views.py
apps/BitLink/: admin.py  apps.py  urls.py
apps/BitLink/migrations/: 0001_initial.py  0002_remove_urldata_timestamp_urldata_expires_at.py  0003_urldata_is_deleted.py
apps/BitLink/models/: urlmodel.py
apps/BitLink/serializers/: delete_url_serializer.py  get_all_urls.py  list_all_urls_serializer.py  short_url_info_serializer.py  update_serializer.py  url_details_serializer.py
apps/BitLink/services/: url_service.py
apps/BitLink/utils/: generate_slug.py  generate_url.py  get_url_details.py  update_url.py
apps/BitLink/views/: get_long_url.py  redirect_url_view.py  shorten_url_view.py  url_details_view.py  url_view.py
apps/Users/: __init__.py  admin.py  apps.py  urls.py
apps/Users/Managers/: custom_user_manager.py
apps/Users/exceptions/: handle_authentication_error.py  (+1 more)
apps/logging_app/: __init__.py  admin.py  apps.py
apps/rapidqr/: apps.py
exceptions/: InvalidInputsError.py  base_custom_exception.py  exceptionHandler.py  handler404.py  handler500.py
exceptions/utils/: exceptionResponse.py
project/: celery.py  celeryconfig.py  flower_config.py  settings.py  urls.py
scripts/: after-install.sh  boot.sh
utils/: redis_client.py  send_email.py
utils/logging/: custom_logging.py  database_handler.py  loggers.py
utils/services/: Service.py
(+40 files in other folders)
